# agent-os-starter-kit

./: .env.local.example  .env.production.backup.example  .env.production.coolify.example  .env.production.langgraph.example  .gitattributes  .gitignore  AGENTS.md  BACKUP_CHANGES_SUMMARY.md  BACKUP_DEPLOYMENT_CHECKLIST.md  BACKUP_IMPLEMENTATION_GUIDE.md  BACKUP_STRATEGY.md  CLAUDE.md  CLIENT_CUSTOMIZATIONS.md  IMPLEMENTATION_PLAN_TOOL_APPROVAL.md  Makefile  NHS_DEBUGGING_GUIDE.md  NHS_PIPELINE_ANALYSIS.md  README.md  SKILLS_CHECKBOX_BUG_INVESTIGATION.md  SKILLS_IMPLEMENTATION_PLAN.md  TEMPLATE_VERSION.txt  THREAD_NAMING_FEATURE.md  docker-compose.local.dev.yml  docker-compose.production.yml  package-lock.json  package.json  pyproject.toml  turbo.json
apps/mcp/: .env.example  ADMINISTRATIVE_ASSISTANT_PROMPT.md  Dockerfile  Dockerfile.dev  README.md  inspector-config.json  pyproject.toml
apps/mcp/src/mcp_server/: __init__.py  config.py  main.py  sentry.py  server.py
apps/mcp/src/mcp_server/auth/: __init__.py  arcade_auth.py  token_utils.py  user_context.py
apps/mcp/src/mcp_server/tools/: __init__.py  arcade_tools.py  base.py  custom_tools.py  youtube_service.py
apps/mcp/src/mcp_server/tools/e18_utility_toolkit/: __init__.py  generate_one_pager.py
apps/mcp/src/mcp_server/tools/e2b_code_sandbox/: __init__.py  execute_tool.py
apps/mcp/src/mcp_server/tools/fireflies/: __init__.py  base.py  tools.py
apps/mcp/src/mcp_server/tools/memory/: __init__.py  tools.py
apps/mcp/src/mcp_server/tools/monday/: __init__.py  (+9 more)
apps/mcp/src/mcp_server/utils/: __init__.py  arcade_tools_lister.py  excel_processor.py  exceptions.py  gcp_storage.py  log_config.py  logging.py  supabase_storage.py
apps/mcp/tests/: test_docker_sandbox_persistence.py
langgraph/: .env.example  README.md  SKILLS_DEEPAGENT_FILE_SHARING_PLAN.md  SKILLS_DEEPAGENT_REFACTOR_PLAN.md  SKILLS_PROMPTS_IMPROVEMENT_PLAN.md  langgraph.json  pyproject.toml
langgraph/e2b-template/: README.md  e2b.Dockerfile  e2b.toml
langgraph/src/agent_platform/: __init__.py  sentry.py
langgraph/src/agent_platform/agents/deep_research_agent/: configuration.py  deep_researcher.py  utils.py
langgraph/src/agent_platform/agents/deepagents/: __init__.py  builder.py  custom_react_agent.py  deep_agent_toolkit.py  deep_agent_toolkit_descriptions.py  file_attachment_processing.py  graph.py  image_processing.py  interrupt.py  model.py  state.py  sub_agent.py  subagent_prompts.py
langgraph/src/agent_platform/agents/n8n_agent/: __init__.py  configuration.py  graph.py
langgraph/src/agent_platform/agents/supervisor_agent/: config.py  graph.py
langgraph/src/agent_platform/agents/tools_agent/: config.py  graph.py  prompts.py  react_agent_with_approval.py  state.py
langgraph/src/agent_platform/services/: auth.py  mcp_token.py
langgraph/src/agent_platform/types/: human_interrupt.py
langgraph/src/agent_platform/utils/: __init__.py  approval_tool_node.py  message_utils.py  model_utils.py  prompt_utils.py  sse_cost_capture.py  tool_approval_utils.py  tool_utils.py  usage_tracking.py
pipelines/outcomes_data/: .env.example  AGENT_BRIEFING.md  DATA_OVERVIEW.md  FIX_SUMMARY.md  GITHUB_SECRETS_UPDATE.md  PRODUCTION_ENV_TEMPLATE.txt  QUICK_REFERENCE.md  TESTING_PLAN.md  TEST_RESULTS_SUMMARY.md  VALIDATION_QUICKSTART.md  pyproject.toml  pytest.ini  run_validation_tests.sh  test-requirements.txt  test_prod_connection.sh  validate_quick.py
pipelines/outcomes_data/outcomes_data/: cli.py
pipelines/outcomes_data/outcomes_data/core/: cache.py  config.py  database.py  logging.py  pipeline.py
pipelines/outcomes_data/outcomes_data/data_sources/cancer/: extractor.py  pipeline.py  scraper.py  transforms.py
pipelines/outcomes_data/outcomes_data/data_sources/ods/: client.py  pipeline.py
pipelines/outcomes_data/outcomes_data/data_sources/oversight/: extractor.py  pipeline.py  scraper.py  transforms.py
pipelines/outcomes_data/outcomes_data/data_sources/rtt/: bins.py  extractor.py  normaliser.py  pipeline.py  scraper.py  transforms.py
pipelines/outcomes_data/outcomes_data/utils/: files.py  http.py
pipelines/outcomes_data/tests/: conftest.py
pipelines/outcomes_data/tests/validation/: README.md  test_cancer_pipeline.py  test_utils.py
(+570 files in other folders)
